--- a/01-clases/app/src/main/res/layout/activity_ecrud_entrenador.xml
+++ b/01-clases/app/src/main/res/layout/activity_ecrud_entrenador.xml
@@ -7,61 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".ECrudEntrenador">
 
-    <Button
-        android:id="@+id/btn_crear_bdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Crear"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.592" />
-
-    <Button
-        android:id="@+id/btn_eliminar_bdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:text="Eliminar"
-        app:layout_constraintEnd_toEndOf="@+id/btn_crear_bdd"
-        app:layout_constraintStart_toStartOf="@+id/btn_crear_bdd"
-        app:layout_constraintTop_toBottomOf="@+id/btn_crear_bdd" />
-
-    <Button
-        android:id="@+id/btn_buscar_bdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="28dp"
-        android:text="Buscar"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_crear_bdd"
-        app:layout_constraintEnd_toStartOf="@+id/btn_crear_bdd"
-        app:layout_constraintTop_toTopOf="@+id/btn_crear_bdd"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/btn_actualizar_bdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Actualizar"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_crear_bdd"
-        app:layout_constraintStart_toEndOf="@+id/btn_crear_bdd"
-        app:layout_constraintTop_toTopOf="@+id/btn_crear_bdd"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <EditText
-        android:id="@+id/input_descripcion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:text="Ingrese Descripcion"
-        app:layout_constraintEnd_toEndOf="@+id/btn_crear_bdd"
-        app:layout_constraintStart_toStartOf="@+id/btn_crear_bdd"
-        tools:layout_editor_absoluteY="261dp" />
-
     <EditText
         android:id="@+id/input_nombre"
         android:layout_width="wrap_content"
@@ -76,14 +21,75 @@
         app:layout_constraintStart_toStartOf="@+id/input_descripcion" />
 
     <EditText
-        android:id="@+id/input_id"
+        android:id="@+id/input_descripcion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="112dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Ingrese Descripcion"
+        app:layout_constraintBottom_toTopOf="@+id/btn_crear_bdd"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn_crear_bdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Crear"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.659" />
+
+    <Button
+        android:id="@+id/btn_eliminar_bdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="Eliminar"
+        app:layout_constraintEnd_toEndOf="@+id/btn_crear_bdd"
+        app:layout_constraintHorizontal_bias="0.416"
+        app:layout_constraintStart_toStartOf="@+id/btn_crear_bdd"
+        app:layout_constraintTop_toBottomOf="@+id/btn_crear_bdd" />
+
+    <Button
+        android:id="@+id/btn_buscar_bdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:text="Buscar"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_crear_bdd"
+        app:layout_constraintEnd_toStartOf="@+id/btn_crear_bdd"
+        app:layout_constraintTop_toTopOf="@+id/btn_crear_bdd"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/btn_actualizar_bdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:text="Actualizar"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_crear_bdd"
+        app:layout_constraintStart_toEndOf="@+id/btn_crear_bdd"
+        app:layout_constraintTop_toTopOf="@+id/btn_crear_bdd"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <EditText
+        android:id="@+id/input_id"
+        android:layout_width="212dp"
+        android:layout_height="44dp"
         android:ems="10"
         android:inputType="text"
         android:text="Ingrese id"
+        app:layout_constraintBottom_toTopOf="@+id/input_nombre"
         app:layout_constraintEnd_toEndOf="@+id/input_nombre"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/input_nombre"
-        tools:layout_editor_absoluteY="99dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.865" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
