--- a/01-clases/app/src/main/res/layout/activity_main.xml
+++ b/01-clases/app/src/main/res/layout/activity_main.xml
@@ -85,4 +85,13 @@
         app:layout_constraintEnd_toEndOf="@+id/btn_sqlite"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btn_sqlite" />
+
+    <Button
+        android:id="@+id/btn_google_maps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="G. Maps"
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="@+id/textView"
+        tools:layout_editor_absoluteX="9dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
